src/sdk/melody-lexer.c
/* Generated by re2c 3.1 on Sat Apr 26 17:22:29 2025 */
#line 1 "src/sdk/melody-lexer.re2c"
#include <ctype.h>
#include <stdbool.h>
#include <stdlib.h>
#include <sdk/melody-lexer.h>

#line 9 "src/sdk/melody-lexer.re2c"


sdk_melody_token_t sdk_melody_lex(const char **input_ptr)
{
	sdk_melody_token_t token;
	const char *YYCURSOR = *input_ptr;
	const char *YYMARKER;

	// Initialize token
	token.type = SDK_MELODY_TOKEN_ERROR;

	// Skip leading whitespace
	while (isspace(*YYCURSOR))
		YYCURSOR++;

	// Update input pointer to skip whitespace
	*input_ptr = YYCURSOR;

	
#line 29 "src/sdk/melody-lexer.c"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case '(': goto yy4;
		case '/': goto yy5;
		case '<': goto yy6;
		case '>': goto yy7;
		case 'A': goto yy8;
		case 'B': goto yy10;
		case 'C': goto yy12;
		case 'D': goto yy14;
		case 'E': goto yy16;
		case 'F': goto yy18;
		case 'G': goto yy20;
		case '_': goto yy22;
		case 'a': goto yy24;
		case 'b': goto yy26;
		case 'c': goto yy28;
		case 'd': goto yy30;
		case 'e': goto yy32;
		case 'f': goto yy34;
		case 'g': goto yy36;
		case '{': goto yy38;
		case '}': goto yy39;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
#line 28 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_END;
            goto done;
        }
#line 65 "src/sdk/melody-lexer.c"
yy2:
	++YYCURSOR;
yy3:
#line 359 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_ERROR;
            goto done;
        }
#line 74 "src/sdk/melody-lexer.c"
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'f': goto yy40;
		case 'm': goto yy42;
		case 'p': goto yy43;
		default: goto yy3;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'b': goto yy44;
		case 'i': goto yy45;
		case 'p': goto yy46;
		default: goto yy3;
	}
yy6:
	++YYCURSOR;
#line 212 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_OCTAVE_DOWN;
            goto done;
        }
#line 98 "src/sdk/melody-lexer.c"
yy7:
	++YYCURSOR;
#line 207 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_OCTAVE_UP;
            goto done;
        }
#line 106 "src/sdk/melody-lexer.c"
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy47;
		case '-': goto yy49;
		default: goto yy9;
	}
yy9:
#line 173 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 21;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 122 "src/sdk/melody-lexer.c"
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy50;
		default: goto yy11;
	}
yy11:
#line 194 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 23;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 137 "src/sdk/melody-lexer.c"
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy51;
		case '-': goto yy53;
		default: goto yy13;
	}
yy13:
#line 47 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 12;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 153 "src/sdk/melody-lexer.c"
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy54;
		case '-': goto yy56;
		default: goto yy15;
	}
yy15:
#line 75 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 14;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 169 "src/sdk/melody-lexer.c"
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy57;
		default: goto yy17;
	}
yy17:
#line 96 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 16;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 184 "src/sdk/melody-lexer.c"
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy58;
		case '-': goto yy60;
		default: goto yy19;
	}
yy19:
#line 117 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 17;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 200 "src/sdk/melody-lexer.c"
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy61;
		case '-': goto yy63;
		default: goto yy21;
	}
yy21:
#line 145 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 19;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 216 "src/sdk/melody-lexer.c"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy64;
		default: goto yy23;
	}
yy23:
#line 201 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_REST;
            token.length = YYCURSOR - *input_ptr;
            goto done;
        }
#line 230 "src/sdk/melody-lexer.c"
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy65;
		case '-': goto yy67;
		default: goto yy25;
	}
yy25:
#line 159 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 9;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 246 "src/sdk/melody-lexer.c"
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy68;
		default: goto yy27;
	}
yy27:
#line 187 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 11;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 261 "src/sdk/melody-lexer.c"
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy69;
		case '-': goto yy71;
		default: goto yy29;
	}
yy29:
#line 33 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 0;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 277 "src/sdk/melody-lexer.c"
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy72;
		case '-': goto yy74;
		default: goto yy31;
	}
yy31:
#line 61 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 2;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 293 "src/sdk/melody-lexer.c"
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy75;
		default: goto yy33;
	}
yy33:
#line 89 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 4;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 308 "src/sdk/melody-lexer.c"
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy76;
		case '-': goto yy78;
		default: goto yy35;
	}
yy35:
#line 103 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 5;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 324 "src/sdk/melody-lexer.c"
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case '#': goto yy79;
		case '-': goto yy81;
		default: goto yy37;
	}
yy37:
#line 131 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 7;
            token.length = YYCURSOR - *input_ptr - 1 + 1;
            goto done;
        }
#line 340 "src/sdk/melody-lexer.c"
yy38:
	++YYCURSOR;
#line 217 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_LOOP_START;
            goto done;
        }
#line 348 "src/sdk/melody-lexer.c"
yy39:
	++YYCURSOR;
#line 222 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_LOOP_END;
            goto done;
        }
#line 356 "src/sdk/melody-lexer.c"
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy82;
		case 'f': goto yy83;
		default: goto yy41;
	}
yy41:
	YYCURSOR = YYMARKER;
	goto yy3;
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy84;
		case 'p': goto yy85;
		default: goto yy41;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy86;
		case 'p': goto yy87;
		default: goto yy41;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy88;
		default: goto yy41;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
		case ':': goto yy89;
		default: goto yy41;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'c': goto yy90;
		case 'l': goto yy91;
		case 'r': goto yy93;
		default: goto yy41;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy95;
		default: goto yy48;
	}
yy48:
#line 180 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 22;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 415 "src/sdk/melody-lexer.c"
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy96;
		default: goto yy9;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy97;
		default: goto yy11;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy98;
		default: goto yy52;
	}
yy52:
#line 54 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 13;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 442 "src/sdk/melody-lexer.c"
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy99;
		default: goto yy13;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy100;
		default: goto yy55;
	}
yy55:
#line 82 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 15;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 463 "src/sdk/melody-lexer.c"
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy101;
		default: goto yy15;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy102;
		default: goto yy17;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy103;
		default: goto yy59;
	}
yy59:
#line 124 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 18;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 490 "src/sdk/melody-lexer.c"
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy104;
		default: goto yy19;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy105;
		default: goto yy62;
	}
yy62:
#line 152 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 20;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 511 "src/sdk/melody-lexer.c"
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy106;
		default: goto yy21;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy107;
		default: goto yy23;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy108;
		default: goto yy66;
	}
yy66:
#line 166 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 10;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 538 "src/sdk/melody-lexer.c"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy109;
		default: goto yy25;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy110;
		default: goto yy27;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy111;
		default: goto yy70;
	}
yy70:
#line 40 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 1;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 565 "src/sdk/melody-lexer.c"
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy112;
		default: goto yy29;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy113;
		default: goto yy73;
	}
yy73:
#line 68 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 3;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 586 "src/sdk/melody-lexer.c"
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy114;
		default: goto yy31;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy115;
		default: goto yy33;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy116;
		default: goto yy77;
	}
yy77:
#line 110 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 6;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 613 "src/sdk/melody-lexer.c"
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy117;
		default: goto yy35;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy118;
		default: goto yy80;
	}
yy80:
#line 138 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_NOTE;
            token.note = 8;
            token.length = YYCURSOR - *input_ptr - 2 + 1;
            goto done;
        }
#line 634 "src/sdk/melody-lexer.c"
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy119;
		default: goto yy37;
	}
yy82:
	++YYCURSOR;
#line 257 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 5;
            goto done;
        }
#line 649 "src/sdk/melody-lexer.c"
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy120;
		case 'f': goto yy121;
		default: goto yy41;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy122;
		default: goto yy41;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy123;
		default: goto yy41;
	}
yy86:
	++YYCURSOR;
#line 239 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 2;
            goto done;
        }
#line 677 "src/sdk/melody-lexer.c"
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy124;
		case 'p': goto yy125;
		default: goto yy41;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy126;
		default: goto yy41;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'f': goto yy127;
		case 'n': goto yy128;
		case 'p': goto yy129;
		case 's': goto yy130;
		default: goto yy41;
	}
yy90:
	++YYCURSOR;
#line 335 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_PANNING;
            token.panning = 3;
            goto done;
        }
#line 708 "src/sdk/melody-lexer.c"
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'l': goto yy131;
		default: goto yy92;
	}
yy92:
#line 329 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_PANNING;
            token.panning = 2;
            goto done;
        }
#line 722 "src/sdk/melody-lexer.c"
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy133;
		default: goto yy94;
	}
yy94:
#line 341 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_PANNING;
            token.panning = 4;
            goto done;
        }
#line 736 "src/sdk/melody-lexer.c"
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy135;
		default: goto yy48;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy136;
		default: goto yy9;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy137;
		default: goto yy11;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy138;
		default: goto yy52;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy139;
		default: goto yy13;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy140;
		default: goto yy55;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy141;
		default: goto yy15;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy142;
		default: goto yy17;
	}
yy103:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy143;
		default: goto yy59;
	}
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy144;
		default: goto yy19;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy145;
		default: goto yy62;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy146;
		default: goto yy21;
	}
yy107:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy147;
		default: goto yy23;
	}
yy108:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy148;
		default: goto yy66;
	}
yy109:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy149;
		default: goto yy25;
	}
yy110:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy150;
		default: goto yy27;
	}
yy111:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy151;
		default: goto yy70;
	}
yy112:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy152;
		default: goto yy29;
	}
yy113:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy153;
		default: goto yy73;
	}
yy114:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy154;
		default: goto yy31;
	}
yy115:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy155;
		default: goto yy33;
	}
yy116:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy156;
		default: goto yy77;
	}
yy117:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy157;
		default: goto yy35;
	}
yy118:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy158;
		default: goto yy80;
	}
yy119:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy159;
		default: goto yy37;
	}
yy120:
	++YYCURSOR;
#line 263 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 6;
            goto done;
        }
#line 895 "src/sdk/melody-lexer.c"
yy121:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy160;
		default: goto yy41;
	}
yy122:
	++YYCURSOR;
#line 251 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 4;
            goto done;
        }
#line 910 "src/sdk/melody-lexer.c"
yy123:
	++YYCURSOR;
#line 245 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 3;
            goto done;
        }
#line 919 "src/sdk/melody-lexer.c"
yy124:
	++YYCURSOR;
#line 233 "src/sdk/melody-lexer.re2c"
	{
            token.type = SDK_MELODY_TOKEN_DYNAMIC;
            token.dynamic = 1;
            goto done;
        }
#line 928 "src/sdk/melody-lexer.c"
yy125:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy161;
		default: goto yy41;
	}
yy126:
	yych = *++YYCURSOR;
	switch (yych) {
		case ':': goto yy162;
		default: goto yy41;
	}
yy127:
